--- a/App.css
+++ b/App.css
@@ -90,6 +90,11 @@ main {
     padding-right: 6px;
 }
 
+.full_width {
+    width: 100% !important;
+    margin: 0 1rem;
+}
+
 .profile_about {
     margin-bottom: 1rem;
     padding: 1rem 2rem 0;
@@ -123,6 +128,7 @@ main {
     align-items: center;
     list-style: none;
     gap: 15px;
+    padding: 0;
 }
 
 .social_icon a {
@@ -192,7 +198,7 @@ main {
     width: 100%;
 }
 
-.form .submit {
+.submit {
     background: #297FE5;
     padding: 9px 13px 9px 11px;
     border: 1px solid #D1D5DB;
